tests/valid/regrid_point_missing_value.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "PointLoaderRegridMissingValue",
    "description": "A coupler model that regrids a scattered-point loader field (PM2.5) onto its target grid by cell-averaging, declaring the configurable per-variable missing_value fill returned for target cells with no contributing source station (RFC pure-io-data-loaders §5.2, §6; ess-v9a.6)."
  },
  "models": {
    "OpenAQCoupler": {
      "reference": { "notes": "Point cell-averaging missing_value config slot (ess-v9a.6)" },
      "variables": {
        "PM2_5": { "type": "state", "units": "dimensionless", "default": 0.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["PM2_5"], "wrt": "t" },
          "rhs": { "op": "-", "args": ["PM2_5"] }
        }
      ],
      "regrid": {
        "PM2_5": {
          "method": "cell_average",
          "missing_value": -999.0,
          "description": "OpenAQ stations averaged per target cell; cells with no station receive -999.0"
        }
      }
    }
  }
}
